<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lr.portandstarboard.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/leftBtnID"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/leftBtnID"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="21dp"
        android:text="@string/how_to_nevigate_a_ship"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/leftBtnID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp"
        android:text="@string/show_left_name"
        android:textSize="12sp" />

    <Button
        android:id="@+id/rightBtnID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/show_right_name"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/leftBtnID"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="101dp"
        android:text="Which side of the ship is the following?" />

    <TextView
        android:id="@+id/sideID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:text="@string/textview" />

    <Button
        android:id="@+id/meansLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView"
        android:layout_marginBottom="87dp"
        android:text="@string/means_left" />

    <Button
        android:id="@+id/meansRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/meansLeft"
        android:layout_alignEnd="@+id/rightBtnID"
        android:layout_alignRight="@+id/rightBtnID"
        android:text="@string/means_right" />
</RelativeLayout>
